// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScrollBox rendering renders expected elements 1`] = `
<div
  className="ScrollBox"
>
  <IconButton
    aria-hidden="true"
    className="ScrollBox__btn"
    icon={
      {
        "icon": [],
        "iconName": "chevron-left",
        "prefix": "fas",
      }
    }
    onClick={[Function]}
    onMouseDown={[Function]}
    size="medium"
    tabIndex="-1"
    tooltipPlacement="right"
    type="ghost"
  />
  <div
    className="ScrollBox__track"
  >
    <div>
      Test
    </div>
  </div>
  <IconButton
    aria-hidden="true"
    className="ScrollBox__btn"
    icon={
      {
        "icon": [],
        "iconName": "chevron-right",
        "prefix": "fas",
      }
    }
    onClick={[Function]}
    onMouseDown={[Function]}
    size="medium"
    tabIndex="-1"
    tooltipPlacement="right"
    type="ghost"
  />
</div>
`;

exports[`ScrollBox rendering renders expected elements when className is set 1`] = `
<div
  className="ScrollBox TestClass"
>
  <IconButton
    aria-hidden="true"
    className="ScrollBox__btn"
    icon={
      {
        "icon": [],
        "iconName": "chevron-left",
        "prefix": "fas",
      }
    }
    onClick={[Function]}
    onMouseDown={[Function]}
    size="medium"
    tabIndex="-1"
    tooltipPlacement="right"
    type="ghost"
  />
  <div
    className="ScrollBox__track"
  >
    <div>
      Test
    </div>
  </div>
  <IconButton
    aria-hidden="true"
    className="ScrollBox__btn"
    icon={
      {
        "icon": [],
        "iconName": "chevron-right",
        "prefix": "fas",
      }
    }
    onClick={[Function]}
    onMouseDown={[Function]}
    size="medium"
    tabIndex="-1"
    tooltipPlacement="right"
    type="ghost"
  />
</div>
`;
